app/style.css
/* ... */
/*********** D. 16 Jan 2018 *************/
.productAccordian{
    margin-bottom: 10px!important;
}
.productAccordian .panel-heading {
    padding: 18px!important;
}
#suggestionAccordion {
    padding: 0 14px!important;
}
.productAccordian .panel-title {
    font-size: 15px!important;
    font-weight: 600!important;
}
.productAccordian .panel-body {
    padding: 0px!important;
}
.productAccordian .panel-title span.glyphicon{
    float: right;
    margin-top: -4px;
    color: #757474;
}
.productAccordian .rt-noData {
    margin-top: -12px!important;
    margin-bottom: 50px!important;
    text-align: center!important;
}

.reconfigurePanel {
  margin-bottom: 10px!important;
}

.reconfigurePanel .panel-heading {
  padding: 10px!important;
}

.reconfigurePanel .panel-body {
  padding: 0px!important;
}

#configureGridId .ReactTable .rt-noData {
  margin-top:13px!important;
}

.editQuoteDiscountMargin {
    margin: 20px;   
}

.editQuoteDiscountLabel {
    margin: 20px;   
}
 .discountform-control {
    display: inline-block !important;
     width: 50% !important;
    height: 25px !important;
} 

